# tapasco-examples

./: .gitignore  .gitmodules  README.md
FeedForwardNN/: README.md  build_bitstream.sh  streaming-job.json
FeedForwardNN/aie/feed_forward_nn/: Makefile
FeedForwardNN/aie/feed_forward_nn/src/: graph.cpp  graph.h  layers.h  luts.h  matVecMultGraph.h
FeedForwardNN/hw/DataStreamer/: Makefile
FeedForwardNN/hw/WeightStreamer/: Makefile
FeedForwardNN/sw/Rust/streaming_nn_sw/: Cargo.toml
FeedForwardNN/sw/Rust/streaming_nn_sw/src/: main.rs
P2P-NVMe-Access/: README.md  build_bitstream.sh
P2P-NVMe-Access/constraints/: pblock-mem-AU280.xdc  pblock-mem-xupvvh.xdc
P2P-NVMe-Access/hw/NVMeReaderWriter/: Makefile
P2P-NVMe-Access/nvme-host-driver/: Makefile  nvme-device-ioctl.h  nvme-device.c
P2P-NVMe-Access/sw/C++/: CMakeLists.txt  main.cpp
ProcessingElements/Counter/: Makefile  README.md
ProcessingElements/Counter/src/: CounterPE.bsv  TestsMainTest.bsv
Vector-Norm/: README.md  build_bitstream.sh  vector-norm.json
Vector-Norm/aie/: Makefile
Vector-Norm/aie/src/: graph.cpp  graph.h  kernels.h  square.cpp  sum_sqrt.cpp
Vector-Norm/hw/DataStreamerVN/: Makefile
Vector-Norm/sw/C++/: CMakeLists.txt  main.cpp
ethernet-transmission-test/: README.md
ethernet-transmission-test/hw/EthernetReceiver/: Makefile
ethernet-transmission-test/hw/EthernetTransmitter/: Makefile
ethernet-transmission-test/sw/Rust/ethernet_transmit_test/: Cargo.toml
ethernet-transmission-test/sw/Rust/ethernet_transmit_test/src/: main.rs
ethernet-transmission-test/tapasco-job-files/: network-jobs-u280-0.json  network-jobs-u280-1.json  network-jobs-vck-0.json  network-jobs-vck-1.json
(+38 files in other folders)
