[package]
name = "streaming_nn_sw"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tapasco = { path = "TAPASCO_HOME/runtime/libtapasco" }
log = "0.4.20"
env_logger = "0.10.0"
snafu = "0.7.5"
structopt = "0.3.26"
statrs = "0.16.0"
