[package]
name = "ethernet_transmit_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tapasco = { path = "../../tapasco-aie/runtime/libtapasco" }
log = "0.4.20"
env_logger = "0.10.0"
snafu = "0.7.5"
structopt = "0.3.26"
statrs = "0.16.0"
